--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,40 @@
-torch~=2.0.1
-requests~=2.31.0
-torchvision~=0.15.2
-tqdm~=4.65.0
-matplotlib~=3.7.2
-h5py~=3.9.0
-numpy~=1.24.3
-pandas~=2.0.3
-opencv-python~=4.8.0.74
-Pillow~=10.0.0
-omegaconf~=2.3.0
-imageio-ffmpeg
+opencv-python==4.8.1.78
+numpy==1.26.0
+Pillow==10.0.1
+pip==23.2.1
+Jinja2==3.1.2
+h5py==3.9.0
+pytz==2023.3.post1
+requests==2.31.0
+colorama==0.4.6
+PyYAML==6.0.1
+black==23.9.1
+platformdirs==3.10.0
+packaging==23.1
+pathspec==0.11.2
+click==8.1.7
+setuptools==68.2.2
+sympy==1.12
+mpmath==1.3.0
+torch==2.0.1+cu118
+matplotlib==3.8.0
+tqdm==4.66.1
+torchvision==0.15.2+cu118
+psutil==5.9.5
+urllib3==2.0.5
+MarkupSafe==2.1.3
+kornia==0.7.0
+pandas==2.1.1
+python-dateutil==2.8.2
+certifi==2023.7.22
+imageio==2.31.4
+six==1.16.0
+networkx==3.1
+idna==3.4
+contourpy==1.1.1
+fonttools==4.43.0
+omegaconf==2.3.0
+pyparsing==3.1.1
+cycler==0.12.0
+kiwisolver==1.4.5
+clip @ git+https://github.com/openai/CLIP.git
