--- a/requirements.txt
+++ b/requirements.txt
@@ -41,4 +41,4 @@ omegaconf~=2.3.0
 pyparsing~=3.1.1
 cycler~=0.12.0
 kiwisolver~=1.4.5
-clip @ git+https://github.com/openai/CLIP.git
+git+https://github.com/openai/CLIP.git
