--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ numpy~=1.26.0
 Pillow~=10.0.1
 pip~=23.2.1
 Jinja2~=3.1.2
-torch~=2.0.1+cu118
-torchvision~=0.15.2+cu118
+torch
+torchvision
 tqdm~=4.66.1
 clip~=1.0
 ftfy~=6.1.1
